--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -20,6 +20,9 @@ nav a:hover{
 h4{
     color: black;
 }
+.hero-image{
+    width: 100%;
+}
 #hero-msg h1,#hero-msg h4{
     text-align: center;
 }
@@ -31,7 +34,7 @@ main section{
     text-align: center;
 }
 #background{
-    height: 75px;
+    height: 725px;
 }
 body{
     background-color: aquamarine;
