--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -13,7 +13,7 @@ Fonts are separated by a & */
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Oswald";
-  --paragraph-font: Rubik, Helvetica, sans-serif;
+  --paragraph-font: "Rubik, Helvetica, sans-serif";
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #e2e06f ;  /* headlines on a white background */ 
