--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 #content{
     max-width: 1600px;
     margin: 0 auto;
@@ -6,19 +7,27 @@
 .logo{
     width: 80px;
 }
+#logo_link{
+    padding-top: 5px;
+}
 nav a{
     text-align: center;
     color: black;
     text-decoration: none;
+    padding: 35px;
 } 
 nav a:hover{
     background-color: #3c4c6c;
 }
 .home-title{
     color: black;
+    font-family: 'Oswald', Courier, monospace;
+    font-size: 2em;
+    margin-top: 10px;
 }
 h4{
     color: black;
+    font-family: 'Oswald', Courier, monospace ;
 }
 .hero-image{
     width: 100%;
@@ -33,11 +42,21 @@ h4{
 main section{
     text-align: center;
 }
+main section img{
+    box-sizing: border-box;
+}
 #background{
     height: 725px;
 }
 body{
     background-color: aquamarine;
+    font-family: 'Rubik', Courier, monospace;
+    font-size: 22px;
+    padding: 0;
+    margin: 0;
+}
+h2{
+    margin: 0;
 }
 header{
     background-color: aliceblue;
@@ -45,24 +64,46 @@ header{
 .book, .join{
     background-color: aliceblue;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover{
     background-color: aliceblue;
+}
+.card-img{
+    border: 10px solid #363f4e;
+}
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
+}
+.icon{
+    padding-top: 10px;
 }
 #background{
     background-color: #97a0c1;
 }
 .msg{
     background-color: aliceblue;
+    line-height: 1.5em;
+    padding: 35px;
 }
 .msg h2{
     color: black;
 }
 .msg p{
     color: black;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 footer{
     background-color: aliceblue;
+    padding: 25px 50px;
+    margin-top: 200px;
+}
+footer .social img{
+    padding-top: 15px;
 }
 footer a{
     color: black;
