--- a/positioning (1)/positioning/positionstyles.css
+++ b/positioning (1)/positioning/positionstyles.css
@@ -182,6 +182,7 @@
   background-color: green; 
   grid-column: 1/3;
   grid-row: 5/7;
+  z-index: 2;
 } 
 .yellow6 {
   width: 100%; 
@@ -189,6 +190,7 @@
   background-color: gold; 
   grid-column: 5/7;
   grid-row: 3/7;
+  z-index: 2;
 } 
 .blue6 {
   width: 100%; 
@@ -196,6 +198,7 @@
   background-color: blue; 
   grid-column: 2/6;
   grid-row: 2/6;
+  
 } 
 
 
