--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -45,7 +45,7 @@ h4{
     grid-row: 1/3;
     z-index: -1;
 }
-.hero-img{
+#hero-img{
     width: 100%;
 }
 #hero-msg {
@@ -62,17 +62,17 @@ h4{
 .button-box{
     text-align: center;
 }
-main section{
-    text-align: center;
-}
+
 main section img{
     box-sizing: border-box;
 }
 #background{
     height: 725px;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 body{
-    background-color: aquamarine;
+    background-color: #97a0c1;
     font-family: 'Rubik', Courier, monospace;
     font-size: 22px;
     padding: 0;
@@ -99,13 +99,21 @@ header{
 }
 .card-img{
     border: 10px solid #363f4e;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+    width: 100%;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
 }
 .card-img, .mountains {
     width: 100%;
 }
-.home-grid {
+.home-grid{
     display: grid;
-    grid-template-columns: repeat(10, 10%);
+    grid-template-columns: repeat(10, 10fr);
+    text-decoration: none;
 }
 .rivers-card, .camping-card, .rapids-card{
     margin: 200px 0;
@@ -126,20 +134,28 @@ header{
     padding-top: 10px;
 }
 #background{
-    background-color: #97a0c1;
+    background-color: #bbc197;
     grid-column: 1/11;
     grid-row: 6/7;
+    height: 725px;
 }
 .mountains{
+    width: 100%;
     grid-column: 2/7;
-    grid-row: 6/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img, .mountains {
+    width: 100%;
 }
 .msg{
     background-color: aliceblue;
     line-height: 1.5em;
-    padding: 35px;
+    padding: 5px;
     grid-column: 6/10;
     grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+
 }
 .msg h2{
     color: black;
@@ -153,6 +169,9 @@ footer{
     background-color: aliceblue;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer .social img{
     padding-top: 15px;
