--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,191 +1,214 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
-#content{
-    max-width: 1600px;
+
+
+body{
+    background-color: #396E94;
+    color: white;
+    text-align: center;
     margin: 0 auto;
-    
+    padding: 0;
+    font-family: "Rubik", Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
-.logo{
+
+h2{
+    margin: 0;
+}
+.icon{
     width: 80px;
+    padding-top: 10px;
 }
+header{
+    display: grid;
+    grid-template-columns: 150px auto;
+    background-color: #AABD8C;
+}
+
+nav{
+    display: flex;
+    justify-content: space-around;
+}
+
+.logo{
+    width: 100px;
+}
+
 #logo_link{
     padding-top: 5px;
     justify-self: center;
     align-self: center;
 }
-nav{
-    display: flex;
-    justify-content: space-around;
-}
-nav a{
-    text-align: center;
-    color: black;
-    text-decoration: none;
-    padding: 35px;
-} 
-nav a:hover{
-    background-color: #3c4c6c;
-}
-.home-title{
-    color: black;
-    font-family: 'Oswald', Courier, monospace;
-    font-size: 2em;
-    margin-top: 10px;
-}
-h4{
-    color: black;
-    font-family: 'Oswald', Courier, monospace ;
-}
-#hero {
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    margin-top: -100px;
-}
-#hero-box {
-    grid-column: 1/4;
-    grid-row: 1/3;
-    z-index: -1;
-}
-#hero-img{
-    width: 100%;
-}
-#hero-msg {
-    grid-column: 2/3;
-    grid-row: 1/2;
-    margin-top: 100px;
-    
-}
-#hero-msg h1,#hero-msg h4{
-    text-align: center;
-    color: #97a0c1;
-}
 
-.button-box{
-    text-align: center;
-}
-
-main section img{
-    box-sizing: border-box;
-}
-#background{
-    height: 725px;
-    grid-column: 1/11;
-    grid-row: 4/9;
-}
-body{
-    background-color: #97a0c1;
-    font-family: 'Rubik', Courier, monospace;
-    font-size: 22px;
-    padding: 0;
-    margin: 0;
-}
-h2{
-    margin: 0;
-}
-header{
-    display: grid;
-    grid-template-columns: 150px auto;
-    background-color: aliceblue;
-}
-.book, .join{
-    background-color: aliceblue;
+.book, .join {
+    background-color: #AABD8C;
+    color: white;
     text-decoration: none;
-    font-size: 18px;
     padding: 15px 30px;
     margin-top: 50px;
     border-radius: 5px;
 }
+
 .book:hover, .join:hover{
-    background-color: aliceblue;
+    background-color: #E7C24F;
+    color: white;
+    text-decoration: underline;
 }
-.card-img{
-    border: 10px solid #363f4e;
-    transition: transform .5s;
+.msg{
+    background-color: #6f7364;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
     box-shadow: 5px 5px 10px #6f7364;
+}
+.msg p {
+    padding-bottom: 15px;
+}
+
+footer{
+    background-color: #396E94;
+    background-color: #6f7364;
+    padding: 25px 50px;
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+}
+footer .social img {
+    padding-top: 15px;
+}
+footer p {
+    font-size: 1.2em;
+}
+footer a {
+    color: white;
+    text-decoration: none;
+}
+footer a:hover{
+    color: #E7C24F;
+    text-decoration: underline;
+}
+nav a:hover{
+
+    background-color: #AABD8C;
+    color: #E7C24F;
+
+}
+nav a {
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    padding: 35px;
+}
+
+#hero{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg h1, #hero-msg h4 {
+    text-align: center;
+    font-family: "Rubik", "Lato", "Helvetica", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+#hero-msg h4{
+    color: white;
+}
+
+#hero-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
+.home-title{
+    font-size: 4em;
+    margin-top: 10px;
+    
+}
+
+#hero-img{
     width: 100%;
 }
-.card-img:hover {
-    opacity: .6;
-    transform: scale(1.1);
+
+.button-box {
+    text-align: center;
 }
-.card-img, .mountains {
-    width: 100%;
+
+main section {
+    text-align: center;
 }
+
+main section img {
+    box-sizing: border-box;
+}
+
 .home-grid{
     display: grid;
     grid-template-columns: repeat(10, 10fr);
     text-decoration: none;
 }
-.rivers-card, .camping-card, .rapids-card{
-    margin: 200px 0;
+
+.card-img{
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
 }
-.rivers-card {
-    grid-column: 2/4;
-    grid-row: 2/3;
+
+.card-img:hover{
+    opacity: .5;
+    transform: scale(1.1);
 }
-.camping-card{
-    grid-column: 5/7;
-    grid-row: 2/3;
-}
-.rapids-card{
-    grid-column: 8/10;
-    grid-row: 2/3;
-}
-.icon{
-    padding-top: 10px;
-}
-#background{
-    background-color: #bbc197;
-    grid-column: 1/11;
-    grid-row: 6/7;
-    height: 725px;
-}
+
 .mountains{
     width: 100%;
     grid-column: 2/7;
     grid-row: 5/8;
     box-shadow: 5px 5px 10px #6f7364;
 }
-.card-img, .mountains {
-    width: 100%;
-}
-.msg{
-    background-color: aliceblue;
-    line-height: 1.5em;
-    padding: 5px;
-    grid-column: 6/10;
-    grid-row: 6/7;
-    box-shadow: 5px 5px 10px #6f7364;
+
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+    margin: 200px 0;
 
 }
-.msg h2{
-    color: black;
+
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+    margin: 200px 0;
 }
-.msg p{
-    color: black;
-    font-size: .8em;
-    padding-bottom: 15px;
+
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
+    margin: 200px 0;
 }
-footer{
-    background-color: aliceblue;
-    padding: 25px 50px;
-    margin-top: 200px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+
+#background{
+    height: 725px;
+    background-color: #AABD8C;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
-footer .social img{
-    padding-top: 15px;
+
+#content {
+    max-width: 1600px;
+    margin: 0 auto;
+
 }
-footer a{
-    color: black;
-    text-decoration: none;
-}
-footer a:hover{
-    color: green;
-}
-footer p{
-    font-size: 1.1em;
-}
-footer p a:hover{
-    text-decoration: underline;
+
+.card-img, .mountains{
+    width: 100%;
 }
