--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto+Slab:wght@100..900&display=swap');
+
 :root {
     /* change the values below to your colors from your palette */
     --primary-color: #76B041   ;
@@ -28,6 +30,13 @@ nav a{
     text-align: center;
     color: var(--paragraph-color-on-color);
     text-decoration: none;
+    padding: 35px;
+}
+#hero img{
+    
+}
+#hero{
+    padding-bottom: 100px;
 }
 #hero-msg h1{
     text-align: center;
@@ -41,12 +50,19 @@ nav a{
 main section{
     text-align: center;
 }
+main section img{
+    box-sizing: border-box;
+}
 #background{
     height: 725px;
     background-color: var(--paragraph-background-color);
 }
 body{
     background-color: var(--accent1-color);
+    font-family: var(--paragraph-font);
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 header{
     background-color: var(--nav-background-color);
@@ -55,15 +71,14 @@ nav a:hover{
     background-color: var(--nav-hover-background-color);
     color: var(--nav-link-color)
 }
-.book{
+.book, .join{
     background-color: var(--nav-background-color);
     color: var(--nav-link-color);
     text-decoration: none;
-}
-.join{
-    background-color: var(--nav-background-color);
-    color: var(--nav-link-color);
-    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover{
     background-color: var(--nav-hover-background-color);
@@ -75,22 +90,33 @@ nav a:hover{
 }
 .msg{
     background-color: var(--paragraph-background-color);
+    line-height: 1.5em;
+    padding: 35px;
 }
 footer{
     background-color: var(--nav-background-color);
     color: var(--paragraph-color-on-color);
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 .home-title{
-    color: var(--headline-color-on-color)
+    color: var(--headline-color-on-color);
+    font-family: var(--heading-font);
+    font-size: 2em;
+    margin-top: 10px;
+    
 }
 h4{
     color: var(--headline-color-on-color);
 }
 .msg h2{
     color: var(--headline-color-on-color);
+    font-family: var(--heading-font);
 }
 .msg p{
     color: var(--paragraph-color-on-color);
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 footer a{
     color: var(--nav-link-color);
@@ -101,10 +127,26 @@ footer a:hover{
 }
 .icon{
     width: 80px;
+    padding-top: 10px;
 }
 footer p{
     font-size: 1.2em;
 }
 footer p a:hover{
     text-decoration: underline;
+}
+h2 {
+    margin: 0;
+}
+#logo_link{
+    padding-top: 5px;
+}
+footer .social img{
+    padding-top: 15px;
+}
+.river-card, .camping-card,.rapids-card{
+    margin: 200px 0;
+}
+.card-img{
+    border: 10px solid var(--paragraph-background-color);
 }
